task350 Redis caching completed